# Federal-Compliance-Copilot-GCP

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  gcp_bucket_setup.sh  pyproject.toml
docs/: manual-kb-creation-howto.md
tools/: chunk_documentai_output.py  create_user_stories.py  data_ingestion_user_stories.yaml  gcp_bucket_setup.sh  gcp_env_setup.sh  gcp_env_setup_stories.yaml  gcp_logging_monit_config.sh  generate_embeddings.py  test_llm_integration.py
